# mandelbrot

./: CMakeLists.txt  LICENSE  config.h.in  juliaShader.frag.in  main.cpp  mandelbrot.cpp  mandelbrot.h  mandelbrotShader.frag  mandelbrotShader.frag.in  profile.h  readme.md
